CGIV-8270 put linked products behind a feature switch, implemented some UI fixes to make things usable

--- a/public/channelgrabber/common/scss/_popup.scss
+++ b/public/channelgrabber/common/scss/_popup.scss
@@ -14,6 +14,8 @@
     min-height: 60px;
     box-sizing: border-box;
     position: fixed;
+    overflow-y: auto;
+    max-height: 78%;
     left: 38%;
     top: 40%;
     z-index: 9999;
